--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
+    "recharts": "^2.6.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
